--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,3 +1,14 @@
+# ===----------------- Cargo.toml - The uhh Cargo.toml :)  -------------------===//
+#
+# This source file is part of the hydralang open source project
+#
+# Copyright (c) 2021 KittyBorgX and the englang project authors
+# Licensed under Apache License v2.0 with Runtime Library Exception
+#
+# See https://github.com/KittyBorgX/hydralang/blob/main/LICENSE for license information
+# See https://github.com/KittyBorgX/hydralang/blob/main/CONTRIBUTORS.md for the list of hydralang project authors
+
+# ===----------------------------------------------------------------------===//
 
 [package]
 name = "lib"
